--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,9 @@
 <%= yield %>
 
 <script type="text/javascript">
+
+$("#tinderslide > ul li").tsort({attr:"id"});
+
 $("#tinderslide").jTinder({
     onDislike: function (item) {
         alert('Dislike image ' + (item.index()+1));
@@ -52,6 +55,7 @@ $("#tinderslide").jTinder({
     likeSelector: '.like',
     dislikeSelector: '.dislike'
 });
+
 </script>
 </body>
 </html>
