--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,11 +1,12 @@
 @import "variables";
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "bootstrap-social";
-@import "jasny-bootstrap";
-@import "supersized";
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "styles";
-@import "tools";
+@import "jasny-bootstrap";
 @import "jTinder";
+@import "styles";
+@import "supersized";
+@import "bootstrap-social";
+@import "tools";
+@import "sweetalert";
