--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,65 +8,112 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.9">
 </head>
 
-<body>
-<% if current_user %>
-  <nav id="myNavmenu" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation">
-    <ul class="nav navmenu-nav">
-      <li class="active"><a href="#"><i class="fa fa-users"></i> Discover</a></li>
-    <li><a href="#"><i class="fa fa-heart"></i> Matches</a></li>
-    <li><a href="#"><i class="fa fa-cog"></i> Settings</a></li>
-    <li><%= link_to '/sign_out', method: :delete do %><i class="fa fa-cog"></i> Log Out <% end %></li>
-    </ul>
-  </nav>
+<body>	
 
-  <div class="navbar navbar-default navbar-fixed-top">
-    <button type="button" class="navbar-toggle button-nav" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
-      <i class="fa fa-cog"></i>
-    </button>
-    <button type="button" class="navbar-toggle pull-right button-nav">
-    <i class="fa fa-heart"></i>
-    </button>
-  </div>
+	<% if current_user %>
+		<nav id="myNavmenu" class="navmenu navmenu-default navmenu-fixed-left offcanvas" role="navigation">
+			<ul class="nav navmenu-nav">
+				<li class="<%= if params[:action] == "index" then "active" end %> nav-btn">
+					<%= link_to root_path do %><i class="fa fa-users"></i> Discover <% end %>
+				</li>
+				<li class="<%= if params[:action] == "matches" then "active" end %> nav-btn">
+					<%= link_to matches_user_path(current_user) do %><i class="fa fa-heart"></i> Matches <% end %>
+				</li>
+				<li class="<%= if params[:action] == "edit" then "active" end %> nav-btn">
+					<%= link_to edit_user_path(current_user) do %><i class="fa fa-cog"></i> Settings <% end %>
+				</li>
+				<li class="nav-btn">
+					<%= link_to '/sign_out', method: :delete do %><i class="fa fa-sign-out"></i> Log Out <% end %>
+				</li>
+			</ul>
+		</nav>
 
-<% else %>
+		<div class="navbar navbar-default navbar-fixed-top">
+			
+			<button type="button" class="navbar-toggle button-nav" data-toggle="offcanvas" data-target="#myNavmenu" data-canvas="body">
+				<i class="fa fa-cog"></i>
+			</button>
+			
+			<%= link_to root_path, class: "navbar-brand" do %>
+				<%= image_tag "logo.png", alt: "Tinstuk Logo", class: "logo-brand" %>
+			<% end %>
+			
+			<button type="button" class="navbar-toggle pull-right button-nav myclass">
+				<%= link_to matches_user_path(current_user) do %><i class="fa fa-heart"></i><% end %>
+			</button>
+			
+		</div>
 
-  <a class="navbar-brand" href="#">
-      <%= image_tag "logo_white.png", alt: "Tinstuk Logo", class: "logo-brand" %>
-  </a>
-  
-<% end %>
+	<% else %>
+		<a class="navbar-brand" href="#">
+			<%= image_tag "logo_white.png", alt: "Tinstuk Logo", class: "logo-brand" %>
+		</a>
+	<% end %>
+
+
 
 <%= yield %>
 
+
 <script type="text/javascript">
 
+	// Allow to load more
+	var load_more = true;
+	// Hide Spinner
+	$(".spinner").hide();
+	// Tooltip
+	$('[data-toggle="tooltip"]').tooltip();
+	
+	// Sort the li elements by id //
+	$("#tinderslide > ul li").tsort({attr:"id"});
+	
+	/*
+	 
+	 * jTinder initialization
 
-/**
-  * Set button action to trigger jTinder like & dislike.
-*/
+	*/
 
-$('.actions .like, .actions .dislike').click(function(e){
-  e.preventDefault();
-  $("#tinderslide").jTinder($(this).attr('class'));
-});
+	$("#tinderslide").jTinder({
+		// dislike callback
+	    onDislike: function (item) {
+	    	//
+	    },
+		
+		// like callback
+	    onLike: function (item) {
+	    	var myId = $("#tinderslide > ul li").last().attr("id");
+	    	$("#user_" + myId)[0].click();
+	    },
 
-$("#tinderslide > ul li").tsort({attr:"id"});
+		animationRevertSpeed: 200,
+		animationSpeed: 400,
+		threshold: 1,
+		likeSelector: '.like',
+		dislikeSelector: '.dislike'
 
-$("#tinderslide").jTinder({
-    onDislike: function (item) {
-        //
-    },
-    onLike: function (item) {
-       var myId = $("#tinderslide > ul li").last().attr("id");
-      $("#user_" + myId)[0].click();
-    },
-    animationRevertSpeed: 200,
-    animationSpeed: 400,
-    threshold: 1,
-    likeSelector: '.like',
-    dislikeSelector: '.dislike'
-});
+	});
 
+	/**
+	  * Set button action to trigger jTinder like & dislike.
+	*/
+
+	$('.actions .like, .actions .dislike').click(function(e){
+		e.preventDefault();
+		$("#tinderslide").jTinder($(this).attr('class'));
+	});
+
+	//Hover Effect//
+
+	 	
+	 	
+		$(".nav-btn").hover(function(){
+		    $(this).addClass("active2");
+		    },function(){
+		    $(this).removeClass("active2");
+		});
+		
 </script>
+
+
 </body>
 </html>
